Changed Anims Description

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <select id="animIndex">
       <option value="0">Idle</option>
       <option value="1">Cheer</option>
-      <option value="2">Wave</option>
-      <option value="3">Dance</option>
+      <option value="2">Yo Wave</option>
+      <option value="3">Chicken Dance</option>
     </select>
 
     <div class="row" style="margin-top: 12px;">
